# bfenv

./: CMakeLists.txt  README.md  build.cmake
.github/workflows/: ubuntu-clang.yml  ubuntu-gcc.yml
cmake/: bfenv-config.cmake.in  config.h.in
examples/: CMakeLists.txt
examples/bfenv/: CMakeLists.txt  version.c
examples/eproc/: CMakeLists.txt  echo.c  prio.c  timer.c
examples/iothread/: CMakeLists.txt  simple.c
include/bfenv/: eproc.h  iothread.h  types.h
src/: build.cmake  iothread.c
src/eproc/: build.cmake  core.c  event-epoll.c  event-poll.c  event-select.c  event.c  timer.c  times.c
